fix: vertical-align of sub-list

--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -24,7 +24,7 @@ header .main-list .logo {
 }
 
 .sub-list li {
-    vertical-align: top;
+    /* vertical-align: top; */
 }
 
 .main-list li:hover .sub-list {
